--- a/public/style.css
+++ b/public/style.css
@@ -154,6 +154,69 @@ input {
   margin-top: 21px;
 }
 
+.dashbord-logout {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: inherit;
+  padding: 15px 10px;
+  align-items: center;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 46%;
+  border-radius: 20px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.margin {
+  margin-top: var(--space-md);
+}
+.dashbord-logout a {
+  margin: 0;
+}
+
+.w-50 {
+  width: 50%;
+  margin-top: var(--space-md);
+  margin: auto;
+}
+.d-none {
+  display: none;
+}
 @media only screen and (max-width: 750px) {
   .container {
     margin: 24px 28px;
@@ -174,15 +237,5 @@ input {
   }
   button {
     width: 85%;
-  }
-  .dashbord-logout {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: inherit;
-    padding: 15px 10px;
-    align-items: center;
-  }
-  .dashbord-logout a {
-    margin: 0;
   }
 }
